# Library-book-classifier

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: metrics.json
data/sample/: checkouts_sample.csv
scripts/: build_web_artifacts.py
src/library_intel/: __init__.py  api.py  cluster.py  config.py  data.py  embeddings.py  features.py  personas.py  pipeline.py  search.py
tests/: conftest.py  test_cluster.py  test_features.py  test_search.py
web/: README.md  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ClusterExplorer.tsx  ClusterGalaxy.tsx  Constellation.tsx  CountUp.tsx  Header.tsx  Hero.tsx  KChart.tsx  Marquee.tsx  Reveal.tsx  ScrollProgress.tsx  SearchPanel.tsx
web/lib/: engine.ts  types.ts
web/public/data/: catalog.json  encoder.json  metrics.json  vectors.json
