[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "library-intel"
version = "1.0.0"
description = "Circulation pattern mining + semantic retrieval over real Seattle Public Library open data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ayush Das" }]
keywords = ["machine-learning", "clustering", "rag", "embeddings", "open-data"]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "joblib>=1.3",
    "pyarrow>=14.0",
    "requests>=2.31",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dense = ["sentence-transformers>=2.2", "torch>=2.0"]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.3"]

[project.scripts]
library-intel = "library_intel.pipeline:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
